localDeployment/ca-http-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsconnector-ca-server
  namespace: cert-manager
  labels:
    app: dsconnector-ca-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dsconnector-ca-server
  template:
    metadata:
      labels:
        app: dsconnector-ca-server
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
      volumes:
        - name: ca-in
          secret:
            secretName: ca-secret
        - name: index-tpl
          configMap:
            name: dsconnector-ca-server-index
        - name: www
          emptyDir: {}
