localDeployment/ca-http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsconnector-ca-server
  namespace: cert-manager
  labels:
    app: dsconnector-ca-server
spec:
  type: NodePort
  selector:
    app: dsconnector-ca-server
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30090
